--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.5.5",
+    "next": "14.2.10",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.10"
+    "react-scroll": "^1.9.0",
+    "react-toastify": "^10.0.5",
+    "react-type-animation": "^3.2.0",
+    "resend": "^4.0.0"
   },
   "devDependencies": {
     "postcss": "^8",
